[workspace]
members = [
    "egui_commonmark",
    "egui_commonmark_macros",
    "egui_commonmark_backend",
]

resolver = "3"


[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"                                        # Follows egui
version = "0.22.1"
repository = "https://github.com/triblespace/gorbie_commonmark"

[workspace.dependencies]
egui_extras = { version = "0.33", default-features = false }
egui = { version = "0.33", default-features = false }

gorbie_commonmark_backend = { package = "gorbie-commonmark-backend", version = "0.22.1", path = "egui_commonmark_backend", default-features = false }
gorbie_commonmark_macros = { package = "gorbie-commonmark-macros", version = "0.22.1", path = "egui_commonmark_macros", default-features = false }

# To add features to documentation
document-features = { version = "0.2" }

pulldown-cmark = { version = "0.13", default-features = false }


[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui.git", branch = "main" }
# egui = { git = "https://github.com/emilk/egui.git", branch = "main" }
# egui_extras = { git = "https://github.com/emilk/egui.git", branch = "main" }

# eframe = { path = "../../egui/crates/eframe" }
# egui = { path = "../../egui/crates/egui" }
# egui_extras = { path = "../../egui/crates/egui_extras" }
