[package]
name = "gorbie-commonmark"
authors = ["Erlend Walstad", "Jan-Paul Bultmann <jp@bultmann.eu>"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Commonmark viewer for egui"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/gorbie-commonmark"
include = ["src/**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
gorbie_commonmark_backend = { workspace = true }
gorbie_commonmark_macros = { workspace = true, optional = true }

egui_extras = { workspace = true }
egui = { workspace = true }

document-features = { workspace = true, optional = true }

pulldown-cmark = { workspace = true }

[features]
default = ["load-images", "pulldown_cmark"]

## Enable proc macros for compile time generation of egui widgets from markdown
macros = ["dep:gorbie_commonmark_macros"]

## Builds upon the `macros` feature. Enables tracking of markdown files to recompile
## when their content changes. Uses nightly features
nightly = ["macros", "gorbie_commonmark_macros/nightly"]

# For internal debugging use only!
dump-macro = ["gorbie_commonmark_macros/dump-macro"]

## No-op feature
pulldown_cmark = []

## Syntax highlighting for code blocks using syntect
better_syntax_highlighting = ["gorbie_commonmark_backend/better_syntax_highlighting"]

## Enable loading of images. Make sure to also opt in to what image format you need
## through the image crate.
load-images = ["egui_extras/image", "egui_extras/file"]

## Support loading svg images
svg = ["egui_extras/svg"]

## Images with urls will be downloaded and displayed
fetch = ["egui_extras/http"]

## Allows loading base64 image data urls from within markdown files. e.g: `data:image/png;base64,...`
## Note that this is really space inefficient. No size limit is in place for the maximum allowed
## data in the url.
##
## This enables the data urls for your entire app as it installs an egui bytes loader
## in the background.
##
## Currently this does not support wasm.
embedded_image = ["gorbie_commonmark_backend/embedded_image"]

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

image = { version = "0.25", default-features = false, features = ["png"] }
gorbie_commonmark_macros = { workspace = true } # Tests won't build otherswise

[package.metadata.docs.rs]
features = ["better_syntax_highlighting", "document-features", "macros"]

[[example]]
name = "macros"
required-features = ["macros"]
