[package]
name = "gorbie-commonmark-backend"
authors = ["Erlend Walstad", "Jan-Paul Bultmann <jp@bultmann.eu>"]
workspace = ".."

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Shared code for gorbie_commonmark and gorbie_commonmark_macros"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/gorbie-commonmark-backend"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
pulldown-cmark = { workspace = true }
egui_extras = { workspace = true }
egui = { workspace = true }

data-url = {  version = "0.3.1", optional = true }
syntect = { version = "5.0.0", optional = true, default-features = false, features = [
    "default-fancy",
] }

[features]
better_syntax_highlighting = ["dep:syntect"]
embedded_image = ["dep:data-url"]
